--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,9 @@
 version: "3"
 services:
+  controller:
+    build: wlp-controller
+    ports: 
+    - "9443:9443"
   database:
     image: mariadb:10.1
     volumes:
