Step 2: WebSphere Liberty Cluster Members

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,3 +4,7 @@ services:
     build: wlp-controller
     ports: 
     - "9443:9443"
+  member:
+    build: wlp-member
+    depends_on:
+    - controller
