--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,10 @@ services:
     build: wlp-member
     depends_on:
     - controller
+  webserver:
+    build: webserver
+    ports: 
+    - "80:80"
+    - "443:443"
+    depends_on:
+    - controller
